Remove Codecademy link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@ layout: home
 		hackerone: <a href="https://hackerone.com/samclarke">samclarke</a></br>
 		bugcrowd: <a href="https://bugcrowd.com/SamClarke">SamClarke</a></br>
 		intigriti: <a href="https://app.intigriti.com/profile/citizenfour">citizenfour</a></br>
-		codecademy: <a href="https://www.codecademy.com/profiles/samclarketech">samclarketech</a></br>
+		<!-- codecademy: <a href="https://www.codecademy.com/profiles/samclarketech">samclarketech</a></br> -->
 	</div>
 </div>
