--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ layout: home
 		<p>Hi I'm Sam, here I write about infosec things.</p>
 	</div>
 	<div id="righty">
-		twitter: <a href="https://twitter.com/samclarketech">samclarketech</a></br>
+		twitter: <a href="https://twitter.com/_Sam_Clarke">samclarketech</a></br>
 		github: <a href="https://github.com/samclarketech">samclarketech</a></br>
-		tryhackme: <a href="https://tryhackme.com/p/clars">clars</a></br>
+		tryhackme: <a href="https://tryhackme.com/p/samclarke">samclarke</a></br>
+		hackthebox: < a href="https://app.hackthebox.com/users/573937">SamClarke</a></br>
 		pentesterlab: <a href="https://pentesterlab.com/profile/SamClarke">SamClarke</a></br>
 		hackerone: <a href="https://hackerone.com/samclarke">samclarke</a></br>
 		bugcrowd: <a href="https://bugcrowd.com/SamClarke">SamClarke</a></br>
