--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: home
 		<p>Hi I'm Sam, here I write about infosec things.</p>
 	</div>
 	<div id="righty">
-		twitter: <a href="https://twitter.com/_Sam_Clarke">samclarketech</a></br>
+		twitter: <a href="https://twitter.com/_Sam_Clarke">_Sam_Clarke</a></br>
 		github: <a href="https://github.com/samclarketech">samclarketech</a></br>
 		tryhackme: <a href="https://tryhackme.com/p/samclarke">samclarke</a></br>
 		hackthebox: < a href="https://app.hackthebox.com/users/573937">SamClarke</a></br>
